logs/Slang/generated/hdlconv/hdlconvertor_p724.sv.log
name: hdlconvertor_p724
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p724.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p724.sv:6:1: error: language feature not yet supported
assert #0 (a^b);
^~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p724.sv:8:1: error: language feature not yet supported
A1: assert #0 (a^b); // assertion can be accessed in control tasks
^~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p724.sv:26:1: error: language feature not yet supported
C1: cover property(e)
^~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p724.sv:38:1: error: language feature not yet supported
C2: cover property(f)
^~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p724.sv:47:1: error: language feature not yet supported
C3: cover property(f)
^~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p724.sv:54:1: error: language feature not yet supported
assert property(@(posedge clk) a |-> b) else // unnamed assertion
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
